# remnus-app

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  README.md  SECURITY.md  capacitor.config.ts  desktop.ini  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  implementation_plan.md  lefthook.yml  next.config.ts  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.json  tsconfig.json  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  mcp_tool_request.yml
.github/workflows/: tauri-release.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
android/app/: build.gradle  capacitor.build.gradle
docs/blog/: README.md  agent-token-efficiency.md  how-i-built-mcp-native.md  mcp-native-vs-integrated.md  remnus-vs-affine.md  remnus-vs-appflowy.md  remnus-vs-notion-mcp.md  remnus-vs-obsidian.md  why-agpl-3.md
docs/mcp/: README.md  agent-memory.md  (+8 more)
mcpb/: manifest.json
messages/: de.json  en.json  es.json  fr.json  hi.json  pt-BR.json  ru.json  tr.json  zh.json
public/: manifest.json
scripts/: apply-missing-tables.ts  check-db.cjs  check-db.mjs  check-db.ts  diagnose-accounts.ts  identify-google-accounts.ts  promote-admin.ts  release.mjs  repair-emir-account.ts  seed-blog.ts  seed-mcp-docs.ts  test-emails.ts
src/: auth.config.ts  auth.ts  middleware.ts  proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: agent_connect.rs  lib.rs  main.rs
(+422 files in other folders)
