[package]
name = "remnus-app"
version = "0.1.1"
description = "Remnus Desktop App"
authors = ["Emir OĞUZ"]
edition = "2021"

[lib]
name = "remnus_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
